Fixing modal on mobile

--- a/main.css
+++ b/main.css
@@ -280,8 +280,7 @@ a{
 .header .close-nav-menu{
 	height: 40px;
 	width: 40px;
-	background-color: #ffffff;
-	margin:0 0 15px 15px;
+	margin:0 0 10px 5px;
 	cursor: pointer;
 	display: none;
 	align-items: center;
@@ -290,6 +289,11 @@ a{
 
 .header .close-nav-menu img{
 	width: 16px;
+}
+
+.close-nav {
+	color: white;
+	width: 15px;
 }
 
 .header .menu-overlay{
@@ -548,6 +552,12 @@ footer {
 	.to-top-btn {
 		right: 0;
 	}
+
+	.close-bg {
+		width: 35px;
+		height: 35px;
+		font-size: 30px;
+	}
 }
 
 
@@ -573,6 +583,18 @@ footer {
 		height: 100%;
 		width: 80%;
 		object-fit: contain;
+	}
+
+	.modal-content {
+		display: block;
+		margin: auto;
+		width: 100%;
+		height: 100vh;
+		max-width: 100%;
+		max-height: 200%;
+		/* transform: scale(1.5); */
+		padding: 0 0 5rem 0;
+		
 	}
 }
 
